<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">gurasApp</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_user">Remember user</string>
    <string name="not_filled">All fields must be filled</string>
    <string name="incorrect_email">Invalid email</string>
    <string name="already_user">User exists</string>
    <string name="bad_login">Incorrect login</string>
    <string name="wait_login">Logging in…</string>
    <string name="wait_register">Signing up…</string>


    <string name="subject_1">MATH</string>
    <string name="subject_1_topic">Multiples and divisors</string>
    <string name="subject_2">NATURAL SCIENCES</string>
    <string name="subject_2_topic">Reproductive system</string>
    <string name="forums">FORUMS</string>
    <string name="forum_question">Question/Answers</string>
    <string name="link_question">Do you want to play?</string>
    <string name="topic_question">More info?</string>
    <string name="make_click">Click</string>
    <string name="links">Links</string>
    <string name="lets_play">LETS PLAY</string>
    <string name="test">TEST</string>
    <string name="multiples">MULTIPLES</string>

    <string name="link1_button">Link 1</string>
    <string name="link2_button">Link 2</string>
    <string name="link1_math">https://es.wikipedia.org/wiki/M%C3%BAltiplo</string>
    <string name="link2_math">http://nosolomates.es/ayuda/ayuda/divisores.htm</string>

    <string name="choose_board">Choose board size</string>
    <string name="board_4">4x4</string>
    <string name="board_5">5x5</string>
    <string name="board_6">6x6</string>
    <string name="board_7">7x7</string>

    <string name="maker">Marker</string>
    <string name="loading_test">Loading test…</string>
    <string name="no_test">No test</string>
    <string name="check">Check</string>
    <string name="advice">Advice</string>
    <string name="next">Next</string>

    <!--Buttons-->
    <string name="es_button">ES</string>
    <string name="eu_button">EU</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <!--URL-->
    <string name="intro_video">https://dl.dropbox.com/s/c8fnd5ozecuomdd/Inicio.mp4</string>
    <string name="math_video">https://www.youtube.com/embed/YW_04Esg4QQ?rel=0&amp;enablejsapi=1</string>
    <string name="science_audio">https://dl.dropbox.com/s/mmlicowqoted1a8/Aparato%20Reproductor.mp3</string>
    <string name="science_female_3">Fallopian tube</string>
    <string name="science_female_2">Uterus</string>
    <string name="science_female_5">Vagina</string>
    <string name="science_female_4">Cervix</string>
    <string name="science_female_1">Ovaries</string>
    <string name="finish">"Finish "</string>
    <string name="link1_science">https://es.wikipedia.org/wiki/Aparato_reproductor_masculino</string>
    <string name="link2_science">https://es.wikipedia.org/wiki/Aparato_genital_femenino</string>
    <string name="science_male_4">Scrotum</string>
    <string name="science_male_2">Seminal vesicle</string>
    <string name="science_male_1">Bladder</string>
    <string name="science_male_5">Vas deferens</string>
    <string name="science_male_6">Prostate</string>
    <string name="science_male_3">Penis glans</string>
    <string name="select">Select</string>
    <string name="answer">Answer:</string>
    <string name="question">Question:</string>
    <string name="teacher">Teacher:</string>
    <string name="title">Title</string>
    <string name="record_button">Record</string>
    <string name="new_forum">New Forum</string>
    <string name="no_micro">No micro</string>
    <string name="no_app">No app</string>
    <string name="title_needed">Title needed</string>
    <string name="permission_needed">Permissions must be accepted</string>
    <string name="exit_title">Exit?</string>
    <string name="exit_text">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start_multiples_title">Starting game</string>
    <string name="start_multiples_player">Starting player</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="start_multiples_number">Starting number</string>
    <string name="game_over">GAME OVER</string>
    <string name="winner">The winner</string>
    <string name="tie">TIE</string>
    <string name="multiples_try_again">Zero points, try again…</string>
    <string name="test_finish">Test finished. Result:</string>
    <string name="no_wifi_warning">Warning. No Wifi</string>
    <string name="no_internet">No internet</string>
    <string name="choice">Choice</string>


</resources>
