<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="?android:attr/listSeparatorTextViewStyle">

    <TextView
        style="?android:attr/textAppearanceLarge"
        android:id="@+id/forumTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AUDIO" />

    <TextView
        android:id="@+id/forumAnswerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:visibility="gone" />

    <TextView
        android:id="@+id/forumAnswerContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/forumTeacherTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teacher"
        android:visibility="gone" />

    <TextView
        android:id="@+id/forumTeacherContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>